After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 738413 - silence uninitialized variable warning in gb_editor_vim_move_page
silence uninitialized variable warning in gb_editor_vim_move_page
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: editor
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-10-12 19:56 UTC by Hashem Nasarat
Modified: 2014-10-12 21:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
vim: silence uninitialized variable warning in gb_editor_vim_move_page (1.53 KB, patch)
2014-10-12 19:56 UTC, Hashem Nasarat
committed Details | Review
Add myself to AUTHORS (487 bytes, patch)
2014-10-12 19:56 UTC, Hashem Nasarat
committed Details | Review

Description Hashem Nasarat 2014-10-12 19:56:19 UTC
I missed this when testing the first set of patches. Also I added myself
to AUTHORS.
Comment 1 Hashem Nasarat 2014-10-12 19:56:21 UTC
Created attachment 288343 [details] [review]
vim: silence uninitialized variable warning in gb_editor_vim_move_page

src/editor/gb-editor-vim.c: In function 'gb_editor_vim_move_page':
src/editor/gb-editor-vim.c:2522:3: warning: 'yalign' may be used
uninitialized in this function [-Wmaybe-uninitialized]
Comment 2 Hashem Nasarat 2014-10-12 19:56:24 UTC
Created attachment 288344 [details] [review]
Add myself to AUTHORS
Comment 3 Christian Hergert 2014-10-12 21:58:39 UTC
Attachment 288343 [details] pushed as 4c72114 - vim: silence uninitialized variable warning in gb_editor_vim_move_page
Attachment 288344 [details] pushed as c6c7321 - Add myself to AUTHORS