vim: silence uninitialized variable warning in gb_editor_vim_move_page

src/editor/gb-editor-vim.c: In function 'gb_editor_vim_move_page':
src/editor/gb-editor-vim.c:2522:3: warning: 'yalign' may be used
uninitialized in this function [-Wmaybe-uninitialized]

https://bugzilla.gnome.org/show_bug.cgi?id=738413